--- a/src/main/webapp/static/css/default.css
+++ b/src/main/webapp/static/css/default.css
@@ -1,6 +1,8 @@
 .main-content{
 	margin: 0;
-	background: #FFF;
+	background: url("../../static/images/timg.png");
+	background-repeat:no-repeat;
+	background-size:100% 100%;
 	padding: 8px 20px 24px;
 }
 	
